# saheeli

./: .gitignore  DESIGN.md  Dockerfile  Dockerfile.orchestrator  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  docker-compose.yml  docker-image.yml  pylint.yml
prompts/: validation_task.md
saheeli/: __init__.py  cli.py  config.py  healthcheck.py  orchestrator.py  servo_manager.py  task_manager.py  utils.py
servo/: __init__.py  agent.py  healthcheck.py  llm_interface.py  main.py  toolbox.py  utils.py
tests/: test_healthcheck.py
