[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "saheeli"
version = "0.1.0"
dependencies = [
    "typer==0.12.3",
    "docker==7.0.0",
    "pyyaml==6.0.1",
    "pydantic==2.7.0",
    "httpx==0.27.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff==0.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["saheeli*", "servo*"]

